fix styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  margin: auto;
   text-align: center;
   background-color: "#333";
-  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .logo {
